# cardanosharp-wallet

./: .csharpierrc.json  .editorconfig  .gitignore  omnisharp.json
CardanoSharp.Wallet/: CardanoSharp.Wallet.csproj  CardanoSharp.Wallet.sln  MnemonicService.cs  libcardanosharp_uplc.dylib
CardanoSharp.Wallet.Test/: AssetLabelTests.cs  Bech32Tests.cs  CardanoSharp.Wallet.Test.csproj  TransactionTests.cs  UPLCTests.cs
CardanoSharp.Wallet.Test/HDWallet/: DerivationTests.cs
CardanoSharp.Wallet.Test/PlutusTests/: PlutusAddressTests.cs  PlutusAppExampleTests.cs  PlutusDataTests.cs
CardanoSharp.Wallet/Advanced/: readme.md
CardanoSharp.Wallet/Common/: BigEndianBuffer.cs  FeeStructure.cs  NetworkInfo.cs  ProtocolParameters.cs  SlotNetworkConfig.cs
CardanoSharp.Wallet/Encoding/: Bech32.cs  Bech32Decoder.cs  Bech32Encoder.cs
CardanoSharp.Wallet/Enums/: AddressType.cs  CoinType.cs  DerivationType.cs  Language.cs  NativeScriptType.cs  NetworkId.cs  NetworkProtocolMagic.cs  NetworkType.cs  OutputPurpose.cs  PurposeType.cs  RedeemerTag.cs  RoleType.cs  WordLists.cs
CardanoSharp.Wallet/Extensions/: ByteArrayExtension.cs  CostModelExtensions.cs  NativeAssetCollectionExtension.cs  StringExtension.cs
CardanoSharp.Wallet/Models/: Asset.cs  Balance.cs  CostModel.cs  Utxo.cs  WalletPath.cs
CardanoSharp.Wallet/Providers/: ProviderService.cs
CardanoSharp.Wallet/UPLC/: Cargo.toml  build.rs
CardanoSharp.Wallet/UPLC/dotnet/: UPLCMethods.cs  UPLCNativeMethods.cs  UPLCNativeMethods.g.cs
CardanoSharp.Wallet/UPLC/src/: lib.rs
CardanoSharp.Wallet/Utilities/: AddressUtility.cs  (+11 more)
(+181 files in other folders)
